ユーザーコメントと考察の対応を確認した

--- a/chapter7.tex
+++ b/chapter7.tex
@@ -5,14 +5,14 @@
 
 
 \section{出力結果の考察}
-前節で述べたデータをそれそれ本システムに入力した際の動作結果について，特筆すべき点をまとめる．
+前節で述べたデータをそれそれ本システムに入力した際の動作結果について，考察をまとめる．
 
 
 
-まず模擬データを入力した際の出力結果である図\ref{fig:6_1}について述べる．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+まず模擬データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
 
 
-次に，ソースnを入力した際の出力結果である\ref{fig:6_2}について述べる．
+次に，ソースnを入力した際の出力結果は\ref{fig:6_2}の通りであった．
 \begin{itemize}
   \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
   \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
@@ -28,22 +28,24 @@
 したがって，会話の流れがベテランのカウンセラーにとってすぐにわかるようになることが，本研究の目的を達成したと考える．
 
 
-しかし前章で述べた通り，保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．次章ではユーザーコメントに対する考察について述べる．
+しかし前章で述べた通り，保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
 
 \section{ユーザーコメントの考察}
+
+本節では，5.2節で得たユーザーコメントに対する考察について述べる．
 
 まず本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられる．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，ご多忙なベテランカウンセラーが長文テキストデータを一度に修正しきれないためにこの機能が求められているとかんがえられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
 
 
-次に，本提案システムに対するコメントとして，ラジオボタンの使い勝手に関するコメントが多かった．
-これは文のグループの分類を手動で変更することで折り畳み機能やラジオボタンの表示の順番など，説明不足な点が多かったからであると考える．
+%次に，本提案システムに対するコメントとして，ラジオボタンの使い勝手に関するコメントが多かった．
+%これは文のグループの分類を手動で変更することで折り畳み機能やラジオボタンの表示の順番など，説明不足な点が多かったからであると考える．
 
 
 %また，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，クライエント自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要があると考えるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
 
-ページ右下側に表示されるカウンセラーの実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
+配色の問題について，ページ右下側に表示されるカウンセラーの実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
 
 \section{今後の課題}
 
