--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,4 +1,4 @@
-本章では，提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザーカウンセラーからのコメントをもとにした，提案システム要件抽出について説明する．本提案システムの概要は次章で詳しく述べる．
+本章では，ユーザーであるベテランカウンセラーからのコメントをもとにした提案システム要件抽出，および本提案システムの概要について詳しく述べる．なお本システムでは，クライエントまたはカウンセラーの一発言を，話者の交代によって判断するものとする．つまり，クライエントの一発言は，カウンセラーが喋り終わってクライエントが喋り始めてから，クライエントが喋り終わってカウンセラーが喋り始めるまでである．また，カウンセラーの一発言は，クライエントが喋り終わってから，あるいはカウンセラーが話を切り出し始めてから，カウンセラーが喋り終わってクライエントが喋り始めるまでである．
 
 
 
@@ -20,7 +20,7 @@
 本提案システムの要件は大きく2点挙げられる．1つ目は，カウンセリングの会話の流れのテキストデータはカウンセラーからの発話によってまったく展開が異なってくるので，実際のクライエント個人の症状の分析よりも，カウンセラートレーニングとして利用するのに適しているからである．本提案システムは，カウンセラーの能力向上に資する可視化分析システムに関するものとして，カウンセラートレーニングの客観的指標は臨床心理学領域で期待がされている．
 
 
-クライアントの会話としては，内容がどの課題領域（仕事，交友，愛）に属するのか，セラピストの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+2つ目の要件は，クライエントとカウンセラーのそれぞれの発言をどう分類するかについてである．クライエントの発言としては，どの1文がどの課題領域（仕事，交友，愛）に属するのか，カウンセラーの発言としては，どの発言がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
 クライエントからの提出した話題が，どの領域に関するものか，カウンセリン
 グの中でその領域がどのように変わっていくかを分析していくと，そのカウンセ
 リングプロセスがより明確になると考えられる．時系列に沿ってカウンセリングの会話の流れを見ることで，最初にク
@@ -33,7 +33,7 @@
 
 \subsubsection{クライエントの発言に関する分類}
 
-本システムでは，クライエントまたはカウンセラーの一発言を，話者の交代によって判断するものとする．つまり，クライエントの一発言は，カウンセラーが喋り終わってクライエントが喋り始めてから，クライエントが喋り終わってカウンセラーが喋り始めるまでである．また，カウンセラーの一発言は，クライエントが喋り終わってから，あるいはカウンセラーが話を切り出し始めてから，カウンセラーが喋り終わってクライエントが喋り始めるまでである．
+
 
 クライエントの発言に関する分類に関しては，1発言単位ではなく1文単位で「愛」「交友」「仕事」を分類するように変更することが求められる．
 たとえば，『うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
@@ -41,8 +41,6 @@
 らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
 うなるのは絶対に許せない！！』というような文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
 原文から，カウンセラーからクライエントへの質問事項の分類の指標として，クライエントの発言をうながしてクライエント自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，クライエントの発言の分量に応じて，それをはさむカウンセラーの発言の縦棒をグラフ上で変えることであると考えた．
-
-また，ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化してほしいというコメントを得た．
 
 \subsubsection{カウンセラーの発言に関する分類}
 
@@ -68,14 +66,8 @@
    \label{fig:ver160203}
  \end{figure}本提案システムのアルゴリズムについて説明する．
 なお，本提案システムの開発言語はJavaScriptである．
-本提案システムのシステム構成図を図\ref{fig:systemkousei}に，処理フローを図\ref{fig:shoriflow}に示す．
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=\linewidth]{systemkousei.png}
-   \end{center}
-   \caption{提案システムのシステム構成図}
-   \label{fig:systemkousei}
- \end{figure}
+本提案システムの処理フローを図\ref{fig:shoriflow}に示す．
+
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{shoriflow.png}
@@ -85,7 +77,19 @@
  \end{figure}
 
 %\subsubsection{形態素解析}
-まずブラウザ上で各テキストのjsonファイルを読み込んで，テキストを単語ごとに区切る形態素解析を行う．jsonファイル読み込み前の本提案システムスクリーンショットを図\ref{fig:yomikomimae2}に示す．
+
+
+まず，グラフ描画前のテキストデータ処理について述べる．このアクティビティ図を図\ref{fig:activity}に示す．
+\begin{figure}
+   \begin{center}
+     \includegraphics[width=\linewidth]{activity.png}
+   \end{center}
+   \caption{テキストデータ処理のアクティビティ図}
+   \label{fig:activity}
+\end{figure}
+
+
+初めに，ブラウザ上で各テキストのjsonファイルを読み込んで，テキストを単語ごとに区切る形態素解析を行う．jsonファイル読み込み前の本提案システムスクリーンショットを図\ref{fig:yomikomimae2}に示す．
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{yomikomimae2.png}
@@ -96,7 +100,7 @@
 形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
 
 %\subsubsection{1文や1発言の作成と分類}
-形態素解析された単語群から，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言ずつのテーブルをつくる．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
+形態素解析された単語群から，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言ずつのテーブルをつくる．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:activity}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
 %この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
 
 
@@ -117,7 +121,7 @@
 まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
 %\subsubsection{グラフ描画}
-その後，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフの可視化の際に，データの可視化やデータに基づいてドキュメントを操作するために使用されているJavaScriptライブラリであるD3.js\cite{bostock2012d3}を使用した．模擬データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:gamenseni}に示す．
+以上がグラフ描画前のテキストデータ処理である．その後，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフの可視化の際に，データの可視化やデータに基づいてドキュメントを操作するために使用されているJavaScriptライブラリであるD3.js\cite{bostock2012d3}を使用した．模擬データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:gamenseni}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
