流れの大筋を整理

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -7,7 +7,7 @@
 
 
 
-\section{システム要件抽出}
+\section{システム要件}
 
 
 
@@ -54,10 +54,9 @@
 
 
 
-\section{提案システム概要}
+\section{システム設計と実装}
 
-
-前節では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザーカウンセラーからのコメントをもとにした，提案システム要件抽出について説明した．それを受け，抽出した要件をみたした提案システムの開発を行った．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの概要について説明する．
+前節では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザーカウンセラーからのコメントをもとにした，提案システム要件抽出について説明した．それを受け，抽出した要件をみたした提案システムの開発を行った．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{ver160203.png}
