--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,4 +1,4 @@
-本章ではユーザーによる，前章で述べた提案システムに対するの評価について述べる．
+本章では前章で述べた提案システムに対するの評価について述べる．
 
 %本システム自体に関してはこの研究が進んでいくことによって，心理臨床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になっていけることを願っております．こういう着想はありませんでしたので，大変期待しているところです．とコメントを得た．
 
