--- a/chapter7.tex
+++ b/chapter7.tex
@@ -5,7 +5,7 @@
 
 
 \section{出力結果の考察}
-前節で述べたデータをそれぞれ本システムに入力した際の動作結果について，考察をまとめる．
+5.1節で述べた，データをそれぞれ本システムに入力した際の動作結果について，考察をまとめる．
 
 
 
@@ -47,7 +47,7 @@
 
 配色の問題について，ページ右下側に表示されるカウンセラーの実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
 
-\section{今後の課題}
+\section{問題点}
 
 ビギナーのカウンセラーを指導する目的で本システムを実用化するためには，まだ議論すべき点が残されていると考える．本論文内でまだ検証しておらず，今後検証していくべきだと考える課題について述べる．
 
