--- a/main.tex
+++ b/main.tex
@@ -24,9 +24,9 @@
 \input{chapter1.tex}
 \chapter{関連研究}
 \input{chapter2.tex}
-\chapter{カウンセリングについて}
+\chapter{カウンセリングの基礎事項}
 \input{chapter3.tex}
-\chapter{システム概要}
+\chapter{提案システム}
 \input{chapter4.tex}
 \chapter{システム評価}
 \input{chapter6.tex}
@@ -46,7 +46,7 @@
 
 %	\bibitem{zokad} 野田俊作，THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER，New York : Haper, Row, Publishers, Inc.，(1956).
 %\end{thebibliography}
-\appendix
-\chapter{図表}
+%\appendix
+%\chapter{図表}
 
 \end{document}
