参考文献ページ

--- a/main.bib
+++ b/main.bib
@@ -121,6 +121,6 @@
 	title = "Hedonic, emotional and experiential perspectives on product quality",
 	journal = "C. Ghaoui (Ed.), Encyclopedia of Human Computer Interaction",
 	year = 2006,
-        pages = "266–272"
+        pages = "266-272"
 }
 
