参考文献修正

--- a/main.bib
+++ b/main.bib
@@ -3,16 +3,16 @@
 
 
 @book{ad2,
-	author = {HEINZ L. ANSBACHER，ROWENA R. ANSBACHER},
+	author = {H. L. Ansbacher，R. R. Ansbacher},
 	title = {THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER},
-	publisher = {New York : Haper, Row, Publishers, Inc.},
+	publisher = { Haper Row Publishers Inc, New York},
 	year = 1956
 }
 
 
 
 @ARTICLE{taskdriven,
-	author = {Eric Alexander and Michael Gleicher},
+	author = {E. Alexander and M. Gleicher},
 	title = {Task-Driven Comparison of Topic Models},
 	journal = "IEEE TRANSACTIONS ON VISUALIZATION AND COMPUTER GRAPHICS",
 		year = 2016,
@@ -24,7 +24,7 @@
 
 @article{bostock2012d3,
   title={D3. js},
-  author={Bostock, Michael},
+  author={B. Michael},
   journal={Data Driven Documents},
   year={2012}
 }
@@ -60,18 +60,16 @@
 @ARTICLE{shou,
 	author = "庄 熇亮",
 	title = "Webカウンセリングシステムの開発および心理データの可視化",
-	year = 2013,
-        pages = "1-116",
+	year = 2013
 }
 
 
-@inproceedings{itoh2010interactive,
+@ARTICLE{itoh2010interactive,
   title={An interactive visualization framework for time-series of web graphs in a 3D environment},
-  author={Itoh, Masahiko and Toyoda, Masashi and Kitsuregawa, Masaru},
-  booktitle={Information Visualisation (IV), 2010 14th International Conference},
+  author={I. Masahiko, T. Masashi, and K. Masaru},
+  booktitle={Information Visualisation (IV), 2010 14th International Conference, IEEE},
   pages={54--60},
-  year={2010},
-  organization={IEEE}
+  year={2010}
 }
 
 
@@ -83,7 +81,7 @@
 )
 
 @book(sn0,
-	author = {キャサリンコーリンほか},
+	author = {キャサリンコーリン},
 	title = {心理学大辞典},
 	publisher = {三省堂},
 	year = 2013
@@ -100,7 +98,7 @@
 
 
 @ARTICLE{voistrap,
-	author = "原田陽雄，米山博人，下谷啓ほか",
+	author = "原田陽雄，米山博人，下谷啓",
 	title = "コミュニケーション可視化技術「Voistrap®」",
 	journal = "富士ゼロックス テクニカルレポート",
 	year = 2013,
@@ -110,14 +108,14 @@
 
 
 @ARTICLE{kuromojijs,
-	author = "Takuya Asano",
+	author = "T. Asano",
 	title = "kuromoji.js, \url{https://github.com/takuyaa/kuromoji.js}",
 	year = 2015
 }
 
 
 @ARTICLE{attrakdiff,
-	author = "Hassenzahl, M.",
+	author = "M. Hassenzahl",
 	title = "Hedonic, emotional and experiential perspectives on product quality",
 	journal = "C. Ghaoui (Ed.), Encyclopedia of Human Computer Interaction",
 	year = 2006,
