序論など修正

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -33,10 +33,10 @@ KH Coderのデメリットとして，時系列に沿った可視化ができないことがあげられる．本論
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで別々に可視化した．しかし本研究では，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかという，カウンセラーとクライエントとの発言の対応が重要になるので，にはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題を可視化した．しかし，ビギナーカウンセラーとクライエントの1対1の会話の流れの可視化という観点では，ビギナーカウンセラーからの発言内容とクライエントの発言内容を組み合わせて可視化しなければならない．
+原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで別々に可視化した．しかし本研究では，カウンセリングにおいて治療者からどのような来談者の話題を引き出せたかという，治療者と来談者との発言の対応が重要になるので，には来談者の発言情報と治療者の発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いて来談者の話題を可視化した．しかし，新人治療者と来談者の1対1の会話の流れの可視化という観点では，新人治療者からの発言内容と来談者の発言内容を組み合わせて可視化しなければならない．
 
 
-Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．本研究においても，カウンセラーおよびクライエントのそれぞれの発言に関して上下の非対称折れ線グラフで描画するという可視化手法は考えうる．しかし，カウンセリングの会話の流れにおいて，カウンセラーの質問とそれに対するクライエントの回答は交互に出現し，質問からどのような回答が引き出されるかに着目したい．したがって上下非対称にそれぞれカウンセラーとクライエントの発言についてグラフを並べるのは不適当だと考えた．
+Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．本研究においても，治療者および来談者のそれぞれの発言に関して上下の非対称折れ線グラフで描画するという可視化手法は考えうる．しかし，カウンセリングの会話の流れにおいて，治療者の質問とそれに対する来談者の回答は交互に出現し，質問からどのような回答が引き出されるかに着目したい．したがって上下非対称にそれぞれ治療者と来談者の発言についてグラフを並べるのは不適当だと考えた．
 
 %軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で，2つのモデルからの話題密度は，横時間軸に沿って計画される．
 
@@ -59,8 +59,8 @@ Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非
 
 
 
-伊藤ら\cite{itoh2010interactive}は，ブログユーザーが興味のある話題の時系列推移を3次元で可視化するシステムを開発した．本論文において，4.1節や5.2節で後述する通りクライエントの発言に関する情報は時系列・文のグループ・文の数の3次元データ，カウンセラーの発言に関する情報は時系列・質問の種類の2次元データであるが，色分けを用いれば2次元のグラフで十分会話の流れを可視化できると考えた．
+伊藤ら\cite{itoh2010interactive}は，ブログユーザーが興味のある話題の時系列推移を3次元で可視化するシステムを開発した．本論文において，4.1節や5.2節で後述する通り来談者の発言に関する情報は時系列・文のグループ・文の数の3次元データ，治療者の発言に関する情報は時系列・質問の種類の2次元データであるが，色分けを用いれば2次元のグラフで十分会話の流れを可視化できると考えた．
 
 
 
-本提案システムとして，カウンセラーからの質問形態と，クライエントの発言の各1文のグループの時間経過に沿った分布変化を可視化した．なお，クライエントの発言の各1文のグループの分け方は，本提案システムの入力データとして取り扱ったヨーガセラピーが基本としているアドラー心理学に由来する分け方を取り入れた．それについては次章で詳しく述べる．%単語のグループの可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「愛」「仕事」「交友」の分類を変更することが出来るようにした．第4章ではどのようにシステムを構成したかについて述べる．
+本提案システムとして，治療者からの質問形態と，来談者の発言の各1文のグループの時間経過に沿った分布変化を可視化した．なお，来談者の発言の各1文のグループの分け方は，本提案システムの入力データとして取り扱ったヨーガセラピーが基本としているアドラー心理学に由来する分け方を取り入れた．それについては次章で詳しく述べる．%単語のグループの可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「愛」「仕事」「交友」の分類を変更することが出来るようにした．第4章ではどのようにシステムを構成したかについて述べる．
