--- a/chapter3.tex
+++ b/chapter3.tex
@@ -56,7 +56,7 @@
 % \item 客観事実よりも，客観事実に対する個人の主観的認知のシステムを重視すること
 % \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること
 %\end{itemize}
-%などがあげられる．
+%などが挙げられる．
 %思想的な特徴としては，
 %\begin{itemize}
 % \item 他者を支配しないで生きる決心をすること
@@ -64,36 +64,36 @@
 % \item 他者を支配しないで生きる決心をすること
 % \item 他者に関心を持って相手を援助しようとすること
 %\end{itemize}
-%などがあげられる．
+%などが挙げられる．
 %治療技法としては，
 %\begin{itemize}
 % \item 現実的に達成可能な治療目標の一致をとること
-% \item クライエント，つまりクライエントの言うことの主として目的について推量をして，それをクライエントに確認をとること
-% \item クライエント自身が自分の責任で解決しなければならないタスクと，クライエントには責任がなく介入する権利がないタスクとを区別すること
+% \item 来談者，つまり来談者の言うことの主として目的について推量をして，それを来談者に確認をとること
+% \item 来談者自身が自分の責任で解決しなければならないタスクと，来談者には責任がなく介入する権利がないタスクとを区別すること
 % \item 目標達成のためのさまざまなアイディアを提供すること
 %\end{itemize}
-%などがあげられる．
+%などが挙げられる．
 
 %アドラー心理学は，社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている．（以上，日本アドラー心理学会Webページより）
 
-%アドラー心理学に基づいた治療，または，カウンセリングでは，アドラー心理学の理論に基づいて，来談者の共同体感覚を育成する目的で，様々な技法が用いられる．そのような治療中，または，カウンセリング中に，治療者，または，カウンセラーが，常に，意識しているのは，来談者のライフスタイルについてである．
+%アドラー心理学に基づいた治療，または，カウンセリングでは，アドラー心理学の理論に基づいて，来談者の共同体感覚を育成する目的で，様々な技法が用いられる．そのような治療中，または，カウンセリング中に，治療者，または，治療者が，常に，意識しているのは，来談者のライフスタイルについてである．
 %アドラー心理学では，人間の問題は，すべて対人関係上の問題であると考える．したがって，アドラー心理学の治療，または，カウンセリングにおいては，来談者が抱えている問題は，対人関係上の問題であり，来談者が自らの使える力をうまく工夫すれば解決できるライフタスクであると考えている．
 
 
 
-%臨床心理士資格取得者数は年を経るごとに増加傾向にあるが，ビギナーのカウンセラーは，上記のような「対人関係上の問題」つまり「愛のタスク」・「仕事のタスク」・「交友のタスク」を，質問に対する回答としてクライエントから引き出すのに苦戦しているという問題がある．
+%臨床心理士資格取得者数は年を経るごとに増加傾向にあるが，新人の治療者は，上記のような「対人関係上の問題」つまり「愛のタスク」・「仕事のタスク」・「交友のタスク」を，質問に対する回答として来談者から引き出すのに苦戦しているという問題がある．
 
-%そこで，ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている．
-
-
+%そこで，熟練治療者が新人の治療者に指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，新人の治療者に対してカウンセリングに関するアドバイスがなされている．
 
 
 
-%%カウンセラーの質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，または短い言葉だけで答えられるような質問は「閉じられた質問」または「閉ざされた質問」と呼ばれている．これに対し，クライエントが5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く，クライエントが何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
-
-%クライエントの会話としては，内容がどのタスク領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，カウンセラーの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
 
 
-%もうひとつのタスクとして，ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので，ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
+%%治療者の質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，または短い言葉だけで答えられるような質問は「閉じられた質問」または「閉ざされた質問」と呼ばれている．これに対し，来談者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかし新人の治療者は「閉じられた質問」の割合が多く，来談者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
 
-以上の分類法をもとに，本研究では，時間軸に沿った可視化によって，クライエントとカウンセラーの会話の流れを可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家つまりカウンセラーから得たコメントをもとにした，提案システムに対する要件の抽出について説明する．
+%来談者の会話としては，内容がどのタスク領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，治療者の質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+
+
+%もうひとつのタスクとして，新人の治療者は閉じられた質問を多く用いる傾向にあるので，新人の治療者を開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
+
+以上の分類法をもとに，本研究では，時間軸に沿った可視化によって，来談者と治療者の会話の流れを可視化し，治療者の発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家つまり治療者から得たコメントをもとにした，提案システムに対する要件の抽出について説明する．
