--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,4 +1,4 @@
-本章では，ユーザーであるベテランカウンセラーからのコメントをもとにした提案システム要件抽出，および本提案システムの概要について詳しく述べる．なお本システムでは，クライエントまたはカウンセラーの一発言を，話者の交代によって判断するものとする．つまり，クライエントの一発言は，カウンセラーが喋り終わってクライエントが喋り始めてから，クライエントが喋り終わってカウンセラーが喋り始めるまでである．また，カウンセラーの一発言は，クライエントが喋り終わってから，あるいはカウンセラーが話を切り出し始めてから，カウンセラーが喋り終わってクライエントが喋り始めるまでである．
+本章では，ユーザーである熟練治療者からのコメントをもとにした提案システム要件抽出，および本提案システムの概要について詳しく述べる．なお本システムでは，来談者または治療者の一発言を，話者の交代によって判断するものとする．つまり，来談者の一発言は，治療者が喋り終わって来談者が喋り始めてから，来談者が喋り終わって治療者が喋り始めるまでである．また，治療者の一発言は，来談者が喋り終わってから，あるいは治療者が話を切り出し始めてから，治療者が喋り終わって来談者が喋り始めるまでである．
 
 
 
@@ -17,36 +17,36 @@
 
 
 
-本提案システムの要件は大きく2点挙げられる．1つ目は，カウンセリングの会話の流れのテキストデータはカウンセラーからの発話によってまったく展開が異なってくるので，実際のクライエント個人の症状の分析よりも，カウンセラートレーニングとして利用するのに適しているからである．本提案システムは，カウンセラーの能力向上に資する可視化分析システムに関するものとして，カウンセラートレーニングの客観的指標は臨床心理学領域で期待がされている．
+本提案システムの要件は大きく2点挙げられる．1つ目の要件は，カウンセリングにおける来談者と新人治療者との会話の流れの可視化である．カウンセリングの会話の流れのテキストデータは治療者からの発話によってまったく展開が異なってくるので，実際の来談者個人の症状の分析よりも，治療者トレーニングとして利用するのに適しているからである．本提案システムは，治療者の能力向上に資する可視化分析システムに関するものとして，治療者トレーニングの客観的指標は臨床心理学領域で期待がされている．
 
 
-2つ目の要件は，クライエントとカウンセラーのそれぞれの発言をどう分類するかについてである．クライエントの発言としては，どの1文がどの課題領域（仕事，交友，愛）に属するのか，カウンセラーの発言としては，どの発言がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
-クライエントからの提出した話題が，どの領域に関するものか，カウンセリン
+2つ目の要件は，来談者と治療者のそれぞれの発言を分類である．来談者の発言としては，どの1文がどの課題領域（仕事，交友，愛）に属するのか，治療者の発言としては，どの発言がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+来談者からの提出した話題が，どの領域に関するものか，カウンセリン
 グの中でその領域がどのように変わっていくかを分析していくと，そのカウンセ
 リングプロセスがより明確になると考えられる．時系列に沿ってカウンセリングの会話の流れを見ることで，最初にク
-ライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で
-異なった領域に話題が展開した，というような分析も可能になると考えられる．クライエント側の関心に注意を向けるということがカウンセリングの基本であるため，カウンセラー側の関心でクライエントを誘導してしまうことはよくないとされる．そのためのチェックが本システムによって可能になることが期待される．もうひとつの課題としては，ビギナーのカウンセラーは閉じられた質問を多様
-するので，ビギナーが開かれた質問を自由に使えるようにベテランカウンセラーが指導する必要がある．そのチェックも本システムによって可能になることが期待される．
+ライエントの関心がどこにあったのか，それに対して治療者からの発話で
+異なった領域に話題が展開した，というような分析も可能になると考えられる．来談者側の関心に注意を向けるということがカウンセリングの基本であるため，治療者側の関心で来談者を誘導してしまうことはよくないとされる．そのためのチェックが本システムによって可能になることが期待される．もうひとつの課題としては，新人の治療者は閉じられた質問を多様
+するので，新人が開かれた質問を自由に使えるように熟練治療者が指導する必要がある．そのチェックも本システムによって可能になることが期待される．
 
 
 
 
-\subsubsection{クライエントの発言に関する分類}
+\subsubsection{来談者の発言に関する分類}
 
 
 
-クライエントの発言に関する分類に関しては，1発言単位ではなく1文単位で「愛」「交友」「仕事」を分類するように変更することが求められる．
+来談者の発言に関する分類に関しては，1発言単位ではなく1文単位で「愛」「交友」「仕事」を分類するように変更することが求められる．
 たとえば，『うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．
 それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
 らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
 うなるのは絶対に許せない！！』というような文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
-原文から，カウンセラーからクライエントへの質問事項の分類の指標として，クライエントの発言をうながしてクライエント自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，クライエントの発言の分量に応じて，それをはさむカウンセラーの発言の縦棒をグラフ上で変えることであると考えた．
+原文から，治療者から来談者への質問事項の分類の指標として，来談者の発言をうながして来談者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，来談者の発言の分量に応じて，それをはさむ治療者の発言の縦棒をグラフ上で変えることであると考えた．
 
-\subsubsection{カウンセラーの発言に関する分類}
+\subsubsection{治療者の発言に関する分類}
 
-カウンセラーの発言の分類について，まずカウンセラーの発言も，次章で述べる初期分類は適当ではないことがあるので，クライエントからの返答だけでなく，カウンセラーの質問区分けも手動で修正したいというコメントを得た．
-また，カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「無駄話」という分類を追加してほしいというコメントを得た．
-クライエントの発言に関する分類とは異なり，カウンセラーの発言に関する分類は1文単位ではなく1発言単位での分類でよいというコメントを得た．
+治療者の発言の分類について，まず治療者の発言も，次章で述べる初期分類は適当ではないことがあるので，来談者からの返答だけでなく，治療者の質問区分けも手動で修正したいというコメントを得た．
+また，治療者の発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「無駄話」という分類を追加してほしいというコメントを得た．
+来談者の発言に関する分類とは異なり，治療者の発言に関する分類は1文単位ではなく1発言単位での分類でよいというコメントを得た．
 
 
 
@@ -56,7 +56,7 @@
 
 \section{システム設計と実装}
 
-前節では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザーカウンセラーからのコメントをもとにした，提案システム要件抽出について説明した．それを受け，抽出した要件をみたした提案システムの開発を行った．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
+前節では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザー治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの設計と実装について説明する．
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{ver160203.png}
@@ -99,28 +99,28 @@
 形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
 
 %\subsubsection{1文や1発言の作成と分類}
-形態素解析された単語群から，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言ずつのテーブルをつくる．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:activity}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
+形態素解析された単語群から，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言ずつのテーブルをつくる．「来談者の発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:activity}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
 %この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
 
 
 
-同様に質問内容の形態は前章の要件通り5種類であり，後述する縦棒描画の色の対応を含め次の通りである．濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジはクライエントの問題をカウンセラーがどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+質問内容の形態は前章の要件通り5種類であり，後述する縦棒描画の色の対応を含め次の通りである．濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジは来談者の問題を治療者がどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
 
 
-カウンセラーの1発言についても，クライエントの発言の1文ごとの分類と同様に，分類初期選択状態の情報をつくり，select.jsに引き渡す．ここでjsonデータを入力した後のカウンセラーの初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
+治療者の1発言についても，来談者の発言の1文ごとの分類と同様に，分類初期選択状態の情報をつくり，select.jsに引き渡す．ここでjsonデータを入力した後の治療者の初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
      \includegraphics[width=\linewidth]{5_2.png}
    \end{center}
-   \caption{カウンセラー発言初期分類方法}
+   \caption{治療者発言初期分類方法}
    \label{fig:5_2}
 %\end{landscape}
  \end{figure}
 まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
 %\subsubsection{グラフ描画}
-以上がグラフ描画前のテキストデータ処理である．その後，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフの可視化の際に，データの可視化やデータに基づいてドキュメントを操作するために使用されているJavaScriptライブラリであるD3.js\cite{bostock2012d3}を使用した．模擬データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:gamenseni}に示す．
+以上がグラフ描画前のテキストデータ処理である．その後，治療者からの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフの可視化の際に，データの可視化やデータに基づいてドキュメントを操作するために使用されているJavaScriptライブラリであるD3.js\cite{bostock2012d3}を使用した．模擬データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:gamenseni}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
@@ -131,27 +131,27 @@
 %\end{landscape}
  \end{figure}
 
-\subsubsection{クライエント発言ビュー}
-図\ref{fig:ver160203}において，まず積み重ね折れ線グラフはクライエントの1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
-横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内におけるクライエントの発言量の累計の文字数を横軸，つまり時間軸とした．後述するカウンセラーの質問を表現する縦棒はこの時間軸にそって出現する．カウンセラーとクライエントの発言の入れ替わりがわかりやすいように，積み重ね折れ線グラフがクライエントの発言のグループ分布をちょうど表しているのは便宜上発言部分の中央部分になっている．
+\subsubsection{来談者発言ビュー}
+図\ref{fig:ver160203}において，まず積み重ね折れ線グラフは来談者の1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内における来談者の発言量の累計の文字数を横軸，つまり時間軸とした．後述する治療者の質問を表現する縦棒はこの時間軸にそって出現する．治療者と来談者の発言の入れ替わりがわかりやすいように，積み重ね折れ線グラフが来談者の発言のグループ分布をちょうど表しているのは便宜上発言部分の中央部分になっている．
 縦軸は発言中の1文の数のうち，どのグループに何文入っているかという文の数を表している．
 
-%ここでjsonデータを入力した後のクライエントの発言の各1文の初期分類状態の分類方法について説明する．
+%ここでjsonデータを入力した後の来談者の発言の各1文の初期分類状態の分類方法について説明する．
 %まず，あらかじめこちらで
-%次に，各単語群を含むクライエントの発言の1文をグループ分けをしていった．
+%次に，各単語群を含む来談者の発言の1文をグループ分けをしていった．
 
 
 
 
-\subsubsection{カウンセラー発言ビュー}
+\subsubsection{治療者発言ビュー}
 
-Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．一方本研究では，カウンセラーとクライエントの会話において，クライエントは文ごとに，カウンセラーは発言ごとに描画を行いたい，かつ選択肢表示のためにグラフを省スペースしたいという観点から，カウンセラーの発言を横軸より下に折れ線グラフとして描画するのではなく，クライエントの発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした．こうすることによって，クライエントとカウンセラーの発言が交互に描画されるので，クライエントとカウンセラーの発言の関連性がわかりやすくなった．積み重ね折れ線グラフに重なっている縦棒は，カウンセラーの質問内容の形態を示す．
+Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．一方本研究では，治療者と来談者の会話において，来談者は文ごとに，治療者は発言ごとに描画を行いたい，かつ選択肢表示のためにグラフを省スペースしたいという観点から，治療者の発言を横軸より下に折れ線グラフとして描画するのではなく，来談者の発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした．こうすることによって，来談者と治療者の発言が交互に描画されるので，来談者と治療者の発言の関連性がわかりやすくなった．積み重ね折れ線グラフに重なっている縦棒は，治療者の質問内容の形態を示す．
 
 
 \subsubsection{発言分類手動修正機能}
-積み重ね折れ線グラフが描画された後に，グラフ左下のラジオボタンエリアにて，クライアントの発言の各1文およびカウンセラーの各1発言において，分類を変えると即時にグラフ描画に変更が適用されるようにした．
+積み重ね折れ線グラフが描画された後に，グラフ左下のラジオボタンエリアにて，クライアントの発言の各1文および治療者の各1発言において，分類を変えると即時にグラフ描画に変更が適用されるようにした．
 %本ラジオボタンエリアがみたした要件については，付録にて記述する．
 
 
 \subsubsection{原文表示機能}
-どこがどの発言を表しているかわからないという問題に対しては，カウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，グラフ右下に周辺の発言を表示する機能を追加することで解決を図った．見やすさのため，グラフの色に対応した文字色ではなく黒い文字で各発言を表示し，それをグラフと対応した色の隅付き括弧【】で囲うようにした．
+どこがどの発言を表しているかわからないという問題に対しては，治療者から来談者への質問を示す縦棒をマウスオーバーすることによって，グラフ右下に周辺の発言を表示する機能を追加することで解決を図った．見やすさのため，グラフの色に対応した文字色ではなく黒い文字で各発言を表示し，それをグラフと対応した色の隅付き括弧【】で囲うようにした．
