--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,6 +1,6 @@
-本章では，前章で述べたシステム評価を元に，本提案システムに対する考察を述べる．第1章で述べた通り，ベテランからビギナーへのカウンセリング指導において重要なことは，ビギナーがクライエントにどのような質問を投げかけるかによって，ビギナーがクライエントからどのような「対人関係上の問題」を引き出したかである．そういった会話の流れがベテランのカウンセラーにとってすぐにわかるようになることが，本研究の目的である．
+本章では，前章で述べたシステム評価を元に，本提案システムに対する考察を述べる．第1章で述べた通り，熟練治療者から新人へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．そういった会話の流れが熟練治療者にとってすぐにわかるようになることが，本研究の目的である．
 
-%2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価を得た．本システムの目的は，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
+%2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価を得た．本システムの目的は，熟練治療者から新人へのカウンセリング指導において，どのような質問を新人の治療者が来談者に投げかけるかによって，新人の治療者が来談者からどのような「対人関係上の問題」に関する回答を引き出せたかが，熟練治療者にとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
 
 
 
@@ -9,7 +9,7 @@
 
 
 
-まず模擬データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+まず模擬データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
 
 
 次に，ソースnを入力した際の出力結果は\ref{fig:6_2}の通りであった．
@@ -21,41 +21,41 @@
 
 また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．なお，最長のテキストデータは約4300文字である．
 \begin{itemize}
-  \item 模擬データおよびカウンセリングを実際に書き起こしたテキストデータを提案システムに入力した際にカウンセラーとクライエントの会話の流れの可視化に成功した．
+  \item 模擬データおよびカウンセリングを実際に書き起こしたテキストデータを提案システムに入力した際に治療者と来談者の会話の流れの可視化に成功した．
   \item 上記の際に読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．
 \end{itemize}
 という結果から，最長データで4000文字以上の会話の流れの文章を文字で読んで読解するより，ひと目で早く会話の流れを理解できると考える．
-したがって，会話の流れがベテランのカウンセラーにとってすぐにわかるようになることが，本研究の目的を達成したと考える．
+したがって，会話の流れが熟練治療者にとってすぐにわかるようになることが，本研究の目的を達成したと考える．
 
 
-しかし前章で述べた通り，保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
+しかし前章で述べた通り，保存機能が求められているなど，新人の治療者指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
 
 \section{ユーザーコメントの考察}
 
 本節では，5.2節で得たユーザーコメントに対する考察について述べる．
 
-まず本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられる．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，ご多忙なベテランカウンセラーが長文テキストデータを一度に修正しきれないためにこの機能が求められているとかんがえられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
+まず本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられる．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，ご多忙な熟練治療者治療者が長文テキストデータを一度に修正しきれないためにこの機能が求められているとかんがえられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
 
 
-%次に，本提案システムに対するコメントとして，ラジオボタンの使い勝手に関するコメントが多かった．
+%次に，本提案システムに対するコメントとして，ラジオボタンの操作性に関するコメントが多かった．
 %これは文のグループの分類を手動で変更することで折り畳み機能やラジオボタンの表示の順番など，説明不足な点が多かったからであると考える．
 
 
-%また，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+%また，来談者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，治療者の質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 
-アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，クライエント自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要があると考えるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
+アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，来談者自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要があると考えるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
 
-配色の問題について，ページ右下側に表示されるカウンセラーの実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
+配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーである熟練治療者がお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が挙げられる．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
 
 \section{問題点}
 
-ビギナーのカウンセラーを指導する目的で本システムを実用化するためには，まだ議論すべき点が残されていると考える．本論文内でまだ検証しておらず，今後検証していくべきだと考える課題について述べる．
+新人の治療者を指導する目的で本システムを実用化するためには，まだ議論すべき点が残されていると考える．本論文内でまだ検証しておらず，今後検証していくべきだと考える課題について述べる．
 
 
 
 \subsubsection{他のグラフ描画との比較}
 そもそも，会話の流れの可視化に積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
-クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+来談者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，治療者の質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 
 
 
@@ -75,21 +75,21 @@
 
 
 
-\subsubsection{クライエントの発言分類項目の追加}
-アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，特に患者の症状に関しては「愛」「仕事」「交友」のどれにも属さず，第4，第5のグループである「自己」と「スピリチュアル」に属することが多いので，「自己」と「スピリチュアル」のグループを加える必要があると考える．
+\subsubsection{来談者の発言分類項目の追加}
+アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，特に患者の症状に関しては「愛」「仕事」「交友」のどれにも属さず，第4，第5のグループである「自己」と「スピリチュアル」に属することが多いので，「自己」と「スピリチュアル」のグループを加える必要があると考える．
 
 
 \subsubsection{視認性の改善}
-ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関してまだ改善の余地があると考える．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要があると考える．また，縦棒の上に発言番号を振ることで，どの縦棒がどのカウンセラーの発言か，よりわかりやすくする必要があると考える．
+ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関してまだ改善の余地があると考える．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要があると考える．また，縦棒の上に発言番号を振ることで，どの縦棒がどの治療者の発言か，よりわかりやすくする必要があると考える．
 
 
 \subsubsection{入力用フォーマット自動生成機能}
-本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーであるベテランのカウンセラーにそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能を搭載する必要もあると考える．
+本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーである熟練治療者にそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能を搭載する必要もあると考える．
 
 
 \subsubsection{ズーム機能}
-本システムのユーザーのカウンセラーに，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまうので，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能を提案したところ，是非欲しいとコメントを得たので，搭載しようと考える．
+本システムのユーザーの治療者に，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまうので，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能を提案したところ，是非欲しいとコメントを得たので，搭載しようと考える．
 
 
 \subsubsection{視覚的表現やユーザーインタラクションの定量的評価}
-ユーザーから見た本提案システムの使い勝手について，まだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，定量的評価を行うことが必要であると考える．たとえば意味差別法（semantic differential scale method）\cite{attrakdiff}は，見やすい-見にくい，使いやすい-使いづらいなどの対立する形容詞の対に関して5段階あるいは7段階の尺度を用いて，商品やシステムの感情的なイメージを定量的に分析する方法である．
+ユーザーから見た本提案システムの操作性について，まだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くの熟練治療者治療者に使っていただき，定量的評価を行うことが必要であると考える．たとえば意味差別法（semantic differential scale method）\cite{attrakdiff}は，見やすい-見にくい，使いやすい-使いづらいなどの対立する形容詞の対に関して5段階あるいは7段階の尺度を用いて，商品やシステムの感情的なイメージを定量的に分析する方法である．
