--- a/chapter6.tex
+++ b/chapter6.tex
@@ -23,17 +23,17 @@
 
 
 
-以上16個のjsonファイルをユーザー1名に渡し，Web上から本提案システムを利用していただいた．
+以上16個のjsonファイルをユーザー1名に渡し，そのユーザーがWeb上から本提案システムを利用した．
 
 
 
 \section{提案システムからの出力結果}
 
 
-本節では，ユーザーに見ていただいた提案システムの出力結果について，特筆すべき点をまとめる．
+本節では，ユーザーが見た提案システムの出力結果について，特筆すべき点をまとめる．
 
 
-まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
@@ -67,15 +67,15 @@
 \section{ユーザーコメント}
 
 
-ユーザーから，主に本システムの使い勝手についてコメントを得た．
+ユーザーから，主に本システムの操作性についてコメントを得た．
 
 まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，長い文章を入力した際に，その日
 だけの使用では終わらないことが多いため，実際開くたびに毎回同じことをさせられるのは，大変苦痛になっているというコメントを得た．
 
 
 
-アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，自身の症状に関する記述は，愛・交友・
-仕事のどれにも当てはまらないことが多く，症状に囚われているクライエントは自己のタスクが大半になるといえるため，第４のタスクとされる自
+アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，自身の症状に関する記述は，愛・交友・
+仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自
 己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．
 
 
