--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1,11 +1,11 @@
 \section{結論}
 
-本研究では，時間軸に沿った可視化によって，クライエントとカウンセラーの会話の流れを可視化するWebシステムを開発した．ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが重要である．それがベテランのカウンセラーにとってすぐにわかるようになったことが，本研究にて実現されたことである．
+本研究では，時間軸に沿った可視化によって，来談者と治療者の会話の流れを可視化するWebシステムを開発した．熟練治療者から新人へのカウンセリング指導において，どのような質問を新人の治療者が来談者に投げかけるかによって，新人の治療者が来談者からどのような「対人関係上の問題」に関する回答を引き出せたかが重要である．それが熟練治療者にとってすぐにわかるようになったことが，本研究にて実現されたことである．
 
-しかし前章で述べたとおり，ビギナーのカウンセラーを指導する目的で本システムを実用化するには，まだまだ視覚的表現やユーザーインタラクションについて議論すべき課題が残されている．次節で今後の課題についてまとめる．
+しかし前章で述べたとおり，新人の治療者を指導する目的で本システムを実用化するには，まだまだ視覚的表現やユーザーインタラクションについて議論すべき課題が残されている．次節で今後の課題についてまとめる．
 
 
-%本提案システムのユーザーとして想定しているベテランのカウンセラーからは「この研究が進んでいくことによって，心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
+%本提案システムのユーザーとして想定している熟練治療者からは「この研究が進んでいくことによって，心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
 %いけることを願っております．こういう着想はありませんでしたので，大変期待
 %しているところです」
 %という本研究への評価を得た．
@@ -21,8 +21,8 @@
 \item 縦棒の上に発言番号を振ること「自己」と「スピリチュアル」のグループの追加
 \item ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関しての改善
 \item ユーザー側で最初から最後まで簡単に可視化を行うために，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能の搭載
-\item 本システムのユーザーのカウンセラーに，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまう問題を解決するために，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能
+\item 本システムのユーザーの治療者に，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまう問題を解決するために，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能
 \item ユーザーから見た本提案システムの視覚的表現やユーザーインタラクションについての定量的な評価
 \end{itemize}
 
-ビギナーのカウンセラーを指導する目的で本システムを実用化するために，以上の今後の課題について取り組むことが求められる．
+新人の治療者を指導する目的で本システムを実用化するために，以上の今後の課題について取り組むことが求められる．
